kyverno-policy/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
    app.kubernetes.io/name: nginx
  name: nginx
  namespace: default
spec:
  containers:
    - image: ghcr.io/asongen/packer:v809
      name: alfred
      resources:
        requests:
          cpu: "50mi"
          memory: "50mi"
        limits: 
          cpu: "50mi"
          memory: "50mi"

---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app.kubernetes.io/name: MyApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
  type: NodePod
